# ebpf_monitor

./: .gitignore  README.md  server.py
agent/: pyproject.toml
agent/src/ebpf_observatory_agent/: README.md  __init__.py  agent.py  cli.py  client.py  collector.py  errors.py  loader.py  ringbuf_helper.c  schema.py
agent/src/ebpf_observatory_agent/bpf/: __init__.py  collector.bpf.c  common.h
